#001 [chore]: atualiza .gitignore com padrões do PyCharm e IntelliJ

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,18 @@ __pycache__/
 venv/
 .env
 
+# PyCharm / IntelliJ
+.idea/
+*.iml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/dataSources/
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/inspectionProfiles/
+
 # Node / React
 node_modules/
 build/
